--- a/Cursos/Detecção de Faces/aula1.ipynb
+++ b/Cursos/Detecção de Faces/aula1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -35,19 +35,19 @@
      "output_type": "stream",
      "text": [
       "(1280, 1920, 3)\n",
-      "(300, 300, 3)\n"
+      "(600, 800, 3)\n"
      ]
     }
    ],
    "source": [
     "print(imagem.shape)\n",
-    "imagem = cv2.resize(imagem, (300, 300))\n",
+    "imagem = cv2.resize(imagem, (800, 600))\n",
     "print(imagem.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,6 +66,132 @@
     "cv2.imshow('Imagem Cinza', imagem_cinza)\n",
     "cv2.waitKey(0) # espera uma tecla ser pressionada\n",
     "cv2.destroyAllWindows() # fecha todas as janelas abertas\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Detecção de Faces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "< cv2.CascadeClassifier 000001F93ABC7DF0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "detector_facial = cv2.CascadeClassifier('datasets/Cascades/haarcascade_frontalface_default.xml')\n",
+    "print(detector_facial)\n",
+    "if detector_facial.empty():\n",
+    "    raise IOError(\"Failed to load cascade classifier at /datasets/Cascades/haarcascade_frontalface_default.xml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[115, 124,  53,  53],\n",
+       "       [677,  72,  68,  68],\n",
+       "       [475, 123,  59,  59],\n",
+       "       [390, 323,  56,  56],\n",
+       "       [387, 233,  73,  73],\n",
+       "       [ 92, 239,  66,  66]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "faces_detectadas = detector_facial.detectMultiScale(imagem_cinza)\n",
+    "faces_detectadas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(faces_detectadas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x, y, w, h in faces_detectadas:\n",
+    "    cv2.rectangle(imagem, (x,y), (x+w, y+h), (0, 255, 255), 2)\n",
+    "cv2.imshow(\"Faces\", imagem)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parêmetros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imagem = cv2.imread('datasets/Images/people1.jpg')\n",
+    "imagem = cv2.resize(imagem, (800, 600))\n",
+    "imagem_cinza = cv2.cvtColor(imagem, cv2.COLOR_BGR2GRAY)\n",
+    "deteccoes = detector_facial.detectMultiScale(imagem_cinza, scaleFactor=1.09)\n",
+    "for x,y,w,h in deteccoes:\n",
+    "    cv2.rectangle(imagem, (x, y), (x+w, y+h), (0, 255, 255), 2)\n",
+    "cv2.imshow(\"Marcações\", imagem)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imagem = cv2.imread('datasets/Images/people2.jpg')\n",
+    "imagem_cinza = cv2.cvtColor(imagem, cv2.COLOR_BGR2GRAY)\n",
+    "deteccoes = detector_facial.detectMultiScale(imagem_cinza, scaleFactor=1.2, minNeighbors=3, minSize=(32,32), maxSize=(100,100))\n",
+    "for x, y, w, h in deteccoes:\n",
+    "    cv2.rectangle(imagem, (x, y), (x+w, y+h), (0, 255, 255), 2)\n",
+    "cv2.imshow(\"Marcações\", imagem)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
    ]
   }
  ],
