--- a/Cursos/Numpy/aula1.ipynb
+++ b/Cursos/Numpy/aula1.ipynb
@@ -60,10 +60,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1,2,3,4])\n",
+    "\n",
+    "print(arr[0])\n",
+    "print(arr[2])\n",
+    "print(arr[1] + arr[2])"
+   ]
   }
  ],
  "metadata": {
