feat: começando a detecção de carros

--- a/Cursos/Detecção de Faces/aula1.ipynb
+++ b/Cursos/Detecção de Faces/aula1.ipynb
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Parêmetros"
+    "Parâmetros"
    ]
   },
   {
@@ -190,6 +190,73 @@
     "for x, y, w, h in deteccoes:\n",
     "    cv2.rectangle(imagem, (x, y), (x+w, y+h), (0, 255, 255), 2)\n",
     "cv2.imshow(\"Marcações\", imagem)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Detecção de olhos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detector_olhos = cv2.CascadeClassifier('datasets/Cascades/haarcascade_eye.xml')\n",
+    "\n",
+    "imagem = cv2.imread('datasets/Images/people1.jpg')\n",
+    "#imagem = cv2.resize(imagem, (800, 600))\n",
+    "imagem_cinza = cv2.cvtColor(imagem, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "deteccoes = detector_facial.detectMultiScale(\n",
+    "    imagem_cinza, scaleFactor=1.3, minSize=(30, 30)\n",
+    "    )\n",
+    "\n",
+    "deteccoes_olhos = detector_olhos.detectMultiScale(\n",
+    "    imagem_cinza, scaleFactor=1.09, minNeighbors=10, maxSize=(70,70)\n",
+    ")\n",
+    "for x, y, w, h in deteccoes:\n",
+    "    cv2.rectangle(imagem, (x, y), (x+w, y+h), (0, 255, 255), 2)\n",
+    "\n",
+    "for x, y, w, h in deteccoes_olhos:\n",
+    "    cv2.rectangle(imagem, (x, y), (x+w, y+h), (255, 0, 0), 1)\n",
+    "\n",
+    "cv2.imshow(\"Dtecções\", imagem)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Carros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detector_carros = cv2.CascadeClassifier('datasets/Cascades/cars.xml')\n",
+    "\n",
+    "imagem = cv2.imread('datasets/Images/car.jpg')\n",
+    "imagem_cinza = cv2.cvtColor(imagem, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "deteccoes = detector_carros.detectMultiScale(\n",
+    "    imagem_cinza, scaleFactor=1.5, minNeighbors=10\n",
+    ")\n",
+    "\n",
+    "for x, y, w, h in deteccoes:\n",
+    "    cv2.rectangle(imagem, (x, y), (x+w, y+h), (0, 255, 255), 2)\n",
+    "\n",
+    "cv2.imshow(\"Carros\", imagem)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
    ]
